提交本地变更

--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -51,7 +51,7 @@
     <!-- Set this if you have a Google Analytics property for the site -->
     <add key="Gallery.AzureCdnHost" value="" />
     <!-- Set this to the Azure CDN Host you are using for blob storage, if you have configured one -->
-    <add key="Gallery.SiteRoot" value="http://nuget.localtest.me/" />
+    <add key="Gallery.SiteRoot" value="http://127.0.0.1:2017/" />
     <add key="reCAPTCHA::PrivateKey" value="" />
     <add key="reCAPTCHA::PublicKey" value="" />
   
@@ -92,6 +92,7 @@
     <!-- Depending on your policy, these likely do not need to vary -->
     <!-- SmtpUri is expected to be of the format: smtps://username:password@host:port. Note that if username contains an "@", you need to URI Encode it! -->
     <!--<add key="Gallery.SmtpUri" value="" />-->
+    <add key="Gallery.SmtpUri" value="smtp://nugetgallery:nugetgallery126@smtp.126.com" />
     <!--
         Location for the Lucene Index.
             AppData -> ~/App_Data/Lucene,
@@ -141,8 +142,8 @@
     <add key="KeyVault.CertificateThumbprint" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="Gallery.SqlServer" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=NuGetGallery; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="Gallery.SupportRequestSqlServer" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=SupportRequest; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="Gallery.SqlServer" connectionString="DataSource=127.0.0.1;port=3306;UserId=root;Password=1234;Database=NuGetGallery;Allow Zero Datetime=true;AllowUserVariables=True;charset=utf8;pooling=true;MinimumPoolSize=10;maximumpoolsize=10;command timeout=60;allow zero datetime=true;" providerName="MySql.Data.MySqlClient" />
+    <add name="Gallery.SupportRequestSqlServer" connectionString="DataSource=127.0.0.1;port=3306;UserId=root;Password=1234;Database=SupportRequest;Allow Zero Datetime=true;AllowUserVariables=True;charset=utf8;pooling=true;MinimumPoolSize=10;maximumpoolsize=10;command timeout=60;allow zero datetime=true;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <elmah>
     <security allowRemoteAccess="true" />
@@ -156,7 +157,6 @@
   <!-- Ensure only Admins may access elmah -->
   <location path="Admin" inheritInChildApplications="false">
     <system.web>
-      <httpCookies httpOnlyCookies="true" />
       <httpHandlers>
         <add name="Elmah" verb="POST,GET,HEAD" path="Errors.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
       </httpHandlers>
@@ -522,7 +522,7 @@
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
-  <entityFramework>
+  <!--<entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="Data Source=(LocalDB)\v11.0;Initial Catalog=NuGetGallery;Integrated Security=SSPI" />
@@ -531,5 +531,22 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+  </entityFramework>-->
+  <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6"></provider>
+      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />-->
+    </providers>
   </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
