--- a/src/NuGetGallery/packages.config
+++ b/src/NuGetGallery/packages.config
@@ -102,4 +102,6 @@
   <package id="WebGrease" version="1.1.0" targetFramework="net452" />
   <package id="WindowsAzure.Caching" version="1.7.0.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net452" />
+  <package id="MySql.Data" version="6.9.8" targetFramework="net452" />
+  <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net452" />
 </packages>
