--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -92,7 +92,7 @@
     <!-- Depending on your policy, these likely do not need to vary -->
     <!-- SmtpUri is expected to be of the format: smtps://username:password@host:port. Note that if username contains an "@", you need to URI Encode it! -->
     <!--<add key="Gallery.SmtpUri" value="" />-->
-   
+    <add key="Gallery.SmtpUri" value="smtp://nugetgallery:nugetgallery126@smtp.126.com" />
     <!--
         Location for the Lucene Index.
             AppData -> ~/App_Data/Lucene,
